se acomoda boton y letrero Study

--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-15.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-15.css
@@ -163,6 +163,11 @@ form label{
     position: relative;
 }
 
+.btn-mover{
+    margin-left: 40%;
+    position: absolute;
+}
+
 @media screen and (max-width: 500px ){
 
     .parrafo-mapa-15{
