se modifico mensajes en el ingreso y la landing

--- a/tecolotl-web/src/main/webapp/resources/css/alumno/inicio-sesion.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/inicio-sesion.css
@@ -163,7 +163,7 @@
 
 .mensaje-error{
 display: inline-block;
-    color: #E31A1A;
+    color: white;
     padding: 10px;
     border: 2px solid;
     border-radius: 8px;
