--- a/tecolotl-web/src/main/webapp/template/administracion/barras-menu.xhtml
+++ b/tecolotl-web/src/main/webapp/template/administracion/barras-menu.xhtml
@@ -5,15 +5,15 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-    <div class="left-content-box uk-margin-top">
+    <h:panelGroup layout="block" rendered="#{request.isUserInRole('administracion')}" styleClass="left-content-box uk-margin-top">
         <h5 class="uk-text-uppercase">#{etiqueta['status']}</h5>
-        <div>
+        <h:panelGroup layout="block" >
             <span class="uk-text-small primera-mayuscula uk-display-block">#{administracion['menu.schools']} <small>(#{estatusControlador.escuelas})</small></span>
             <progress class="uk-progress" value="100" max="100"/>
-        </div>
-        <div>
+        </h:panelGroup>
+        <h:panelGroup layout="block">
             <span class="uk-text-small primera-mayuscula uk-display-block">#{administracion['schooldetail.licenses']} <small>(#{estatusControlador.licencias})</small></span>
             <progress class="uk-progress success" value="100" max="100"/>
-        </div>
-    </div>
+        </h:panelGroup>
+    </h:panelGroup>
 </html>
