--- a/tecolotl-web/src/main/webapp/template/administracion/barras-menu.xhtml
+++ b/tecolotl-web/src/main/webapp/template/administracion/barras-menu.xhtml
@@ -5,7 +5,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-    <h:panelGroup layout="block" rendered="#{request.isUserInRole('administracion')}" styleClass="left-content-box uk-margin-top">
+    <h:panelGroup layout="block" rendered="#{request.isUserInRole('administrador')}" styleClass="left-content-box uk-margin-top">
         <h5 class="uk-text-uppercase">#{etiqueta['status']}</h5>
         <h:panelGroup layout="block" >
             <span class="uk-text-small primera-mayuscula uk-display-block">#{administracion['menu.schools']} <small>(#{estatusControlador.escuelas})</small></span>
