paginacion tabla alumnos en vista detalle profesor y se colocaron dropdown de actividades , estilos dropdow

--- a/tecolotl-web/src/main/webapp/resources/css/coordinador/detalle-profesor.css
+++ b/tecolotl-web/src/main/webapp/resources/css/coordinador/detalle-profesor.css
@@ -30,8 +30,19 @@
 .puntero:hover{
     cursor: pointer;
 }
-[id$='tabla-alumno']  .uk-dropdown-nav > li {
+
+
+.tabla-detalles-tareas,.tabla-detalles-tareas-alumno{
     color: black;
-    margin-bottom: 5px;
-    text-align: left;
+    font-size: 13px;
+    box-shadow: none;
+    border-collapse: collapse;
+}
+.tabla-detalles-tareas tbody td,.tabla-detalles-tareas-alumno tbody td{
+    padding: 2px;
+}
+.tabla-detalles-tareas thead th,.tabla-detalles-tareas-alumno thead th{
+    padding: 3px;
+    font-size: 13px;
+    background-color: #1e87f0!important;
 }
