--- a/tecolotl-web/src/main/webapp/template/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/template/administracion/dashboard.xhtml
@@ -10,9 +10,9 @@
 <ui:include src="header.xhtml"/>
 <h:body >
    <ui:include src="nav1.xhtml"/>
-   <aside id="left-col" class="uk-light uk-visible@m">
+   <aside id="left-col" class="uk-visible@m">
       <ui:include src="nav2.xhtml"/>
-      <div class="left-nav-wrap">
+      <div class="uk-light left-nav-wrap">
          <ui:insert name="menu"/>
          <ui:include src="barras-menu.xhtml"/>
       </div>
