--- a/tecolotl-web/src/main/webapp/template/administracion/header.xhtml
+++ b/tecolotl-web/src/main/webapp/template/administracion/header.xhtml
@@ -12,6 +12,7 @@
     <h:outputStylesheet library="css" name="uikit.css" />
     <h:outputStylesheet library="css" name="dashboard.css"/>
     <h:outputStylesheet library="css" name="letra.css"/>
+    <h:outputStylesheet library="css" name="/coordinador/estilo-general.css" rendered="#{request.isUserInRole('coordinador')}"/>
 
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
