--- a/tecolotl-web/src/main/webapp/resources/css/coordinador/estilo-general.css
+++ b/tecolotl-web/src/main/webapp/resources/css/coordinador/estilo-general.css
@@ -1,3 +1,10 @@
 .uk-dropdown-nav > li > a {
     color: #1e87f0;
 }
+
+
+@media screen and (max-width: 1280px){
+ table{
+     font-size: 14px;
+ }
+}
