--- a/tecolotl-web/src/main/webapp/template/profesor/footer.xhtml
+++ b/tecolotl-web/src/main/webapp/template/profesor/footer.xhtml
@@ -32,5 +32,6 @@
 <h:outputScript library="js" name="spinner.js"/>
 <h:outputScript library="js" name="uikit.js"/>
 <h:outputScript library="js" name="uikit-icons.js"/>
+<h:outputScript library="js" name="/profesor/licencia.js"/>
 
 </html>
