--- a/tecolotl-web/src/main/webapp/template/profesor/nav1-profesor.xhtml
+++ b/tecolotl-web/src/main/webapp/template/profesor/nav1-profesor.xhtml
@@ -16,9 +16,9 @@
                         <span class="lescuadron letra-logo uk-visible@m">squadron</span>
                     </a>
                 </div>
-
+                <span style="display: none" id="licencia-fecha" data-licencia="15"/>
             </nav>
-            <div class="barra-nav"></div>
+        <div class="barra-nav"></div>
         </div>
     </div>
 
