--- a/tecolotl-web/src/main/webapp/resources/css/coordinador/detalle-profesor.css
+++ b/tecolotl-web/src/main/webapp/resources/css/coordinador/detalle-profesor.css
@@ -61,3 +61,9 @@
     height: 100vh;
     background-color: rgba(0,0,0,.8);
 }
+.boton-desabilitado{
+    border: 1px solid #95A5A6;
+}
+.boton-desabilitado:hover{
+    cursor: initial;
+}
