--- a/tecolotl-web/src/main/webapp/resources/css/coordinador/detalle-profesor.css
+++ b/tecolotl-web/src/main/webapp/resources/css/coordinador/detalle-profesor.css
@@ -67,3 +67,28 @@
 .boton-desabilitado:hover{
     cursor: initial;
 }
+#tablas-alumnos{
+    min-height: 400px;
+    position: relative;
+}
+.cargando-tabla{
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.cargando-tabla svg{
+    width: 8%;
+}
+.ocultar-tabla{
+    display: none;
+}
+.cargando-tabla svg .contorno, .cargando-tabla svg .centro{
+    stroke: #1e87f0;
+}
