--- a/tecolotl-web/src/main/webapp/template/administracion/footer.xhtml
+++ b/tecolotl-web/src/main/webapp/template/administracion/footer.xhtml
@@ -31,5 +31,6 @@
 </div>
 <h:outputScript library="js" name="uikit.js"/>
 <h:outputScript library="js" name="uikit-icons.js"/>
+<h:outputScript library="js" name="/profesor/licencia.js"/>
 
 </html>
