--- a/tecolotl-web/src/main/webapp/template/profesor/nav1-profesor.xhtml
+++ b/tecolotl-web/src/main/webapp/template/profesor/nav1-profesor.xhtml
@@ -16,7 +16,7 @@
                         <span class="lescuadron letra-logo uk-visible@m">squadron</span>
                     </a>
                 </div>
-                <span style="display: none" id="licencia-fecha" data-licencia="15"/>
+                <span style="display: none" id="licencia-fecha" data-licencia="#{profesorControlador.personaActivaModelo.dias}"/>
             </nav>
         <div class="barra-nav"></div>
         </div>
