--- a/tecolotl-web/src/main/webapp/resources/css/coordinador/estilo-general.css
+++ b/tecolotl-web/src/main/webapp/resources/css/coordinador/estilo-general.css
@@ -6,7 +6,36 @@ h1 {
     text-transform: capitalize;
 }
 
+.mensaje-licencias{
+    min-height: 80px;
+    border: 3px solid black;
+    border-radius: 20px;
+    padding: 4px 0;
+    font-size: 15px;
+    font-weight: 900;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.--mensaje-licencia-restante{
+    background-color: #F1C40F;
+    color: black;
+}
+.--mensaje-licencia-caducada{
+    background-color: #ED1C24;
+    color: white;
+}
 
+.mensaje-licencias:hover{
+    cursor: pointer;
+}
+.cerrar-mensaje{
+    position: absolute;
+    right: 3px;
+    top: 2px;
+}
 @media screen and (max-width: 1280px){
  table{
      font-size: 14px;
