--- a/tecolotl-web/src/main/webapp/resources/css/profesor/dashboard-profesor.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/dashboard-profesor.css
@@ -134,3 +134,16 @@ ul > li > span {
     right: 3px;
     top: 2px;
 }
+
+.ayuda-imagen {
+    width: 25px;
+    margin-top: 10px;
+    transition:transform linear 0.3s;
+}
+.ayuda-imagen path,.ayuda-imagen circle{
+    fill: black;
+}
+.ayuda-imagen:hover{
+    cursor: pointer;
+    transform: scale(1.5);
+}
