--- a/tecolotl-web/src/main/webapp/template/administracion/barras-menu.xhtml
+++ b/tecolotl-web/src/main/webapp/template/administracion/barras-menu.xhtml
@@ -5,12 +5,12 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
+<h5 class="uk-text-uppercase">#{etiqueta['status']}</h5>
     <h:panelGroup layout="block" rendered="#{request.isUserInRole('administrador')}" styleClass="left-content-box uk-margin-top">
-        <h5 class="uk-text-uppercase">#{etiqueta['status']}</h5>
         <ui:repeat value="#{estatusControlador.licenciaVistaModeloLista}" var="licenciaVistaModelo">
-            <h:panelGroup layout="block" >
-                <span class="uk-text-small primera-mayuscula uk-display-block">#{licenciaVistaModelo.claveCentroTrabajo} <small>(#{licenciaVistaModelo.dias})</small></span>
-                <progress class="uk-progress #{licenciaVistaModelo.dias gt 0 ? 'advertencia' : 'peligro'}" value="#{licenciaVistaModelo.dias}" max="30"/>
+            <h:panelGroup layout="block" styleClass="uk-flex uk-flex-wrap uk-flex-between" >
+                <span class="uk-text-small primera-mayuscula uk-text-bold licencia-seleccionada" onclick="buscarLicenciasVencidas(this)">#{licenciaVistaModelo.claveCentroTrabajo}</span>  <small class="#{licenciaVistaModelo.dias gt 0 ? 'licencia-por-vencer' : 'licencia-vencida'}">(#{licenciaVistaModelo.dias})</small>
+                <progress class="uk-progress #{licenciaVistaModelo.dias gt 0 ? 'licencia-por-vencer' : 'licencia-vencida'}" value="#{licenciaVistaModelo.dias gt 0 ? licenciaVistaModelo.dias : '30'}" max="30"/>
             </h:panelGroup>
         </ui:repeat>
     </h:panelGroup>
