--- a/tecolotl-web/src/main/webapp/resources/css/administracion/profesores.css
+++ b/tecolotl-web/src/main/webapp/resources/css/administracion/profesores.css
@@ -2,7 +2,7 @@
     text-transform: capitalize;
 }
 
-#formulario-modal-profesor .uk-modal-body > div > div:last-child{
+#formulario-modal-profesor .uk-modal-body .login{
     display: grid;
     grid-template-columns: 40px 40px 40px 40px 40px 40px 40px;
     grid-template-rows: 40px 40px 40px 40px;
@@ -13,13 +13,13 @@
     margin-top: 30px;
 }
 
-#formulario-modal-profesor .uk-modal-body > div > div:last-child > img{
+#formulario-modal-profesor .uk-modal-body .login > img{
     width: 40px;
     height: 40px;
     transition: all 0.5s linear;
     cursor: pointer;
 }
-#formulario-modal-profesor .uk-modal-body > div > div:last-child > img:hover{
+#formulario-modal-profesor .uk-modal-body .login > img:hover{
    transform: scale(1.5,1.5);
 }
 
