barras licencias y datos parte superior dashboard administracion cambio de fuente

--- a/tecolotl-web/src/main/webapp/resources/css/dashboard.css
+++ b/tecolotl-web/src/main/webapp/resources/css/dashboard.css
@@ -333,7 +333,9 @@ input:checked + .slider:before {
 .licencia-vencida{
 	color: #ED1C24;
 }
-
+#estatus-escuelas small{
+	font-size: 16px;
+}
 .licencia-por-vencer::-webkit-progress-value {
 	background-color: #F1C40F;
 }
