barra lateral izquierda administracion alumnos sobrepasados

--- a/tecolotl-web/src/main/webapp/resources/css/dashboard.css
+++ b/tecolotl-web/src/main/webapp/resources/css/dashboard.css
@@ -359,3 +359,13 @@ input:checked + .slider:before {
 	color: #0e6dcd !important;
 	cursor: pointer;
 }
+
+/*Boton inhabilitado*/
+.boton-inhabilitado{
+	color: #95A5A6;
+	border: 1px solid;
+	background: none;
+}
+.boton-inhabilitado:hover{
+	cursor: initial;
+}
